# gdc

./: CMakeLists.txt  README.txt  gdc.cpp
